--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -8,3 +7,12 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> PhpStorm ###
+/.idea
+###< PhpStorm ###
+
+###> Upload Files ###
+!/public/uploads/.gitignore
+/public/uploads/*
+###< Upload Files ###
