--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,29 @@
 {
+    "name": "test/project",
+    "description": "Test task for applying for a job",
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.1.3",
+        "php": "7.2.*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/common": "^2",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^2",
+        "doctrine/orm": "^2",
+        "easycorp/easyadmin-bundle": "^3.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
-        "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/mime": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
-    },
+    }
+    ,
     "require-dev": {
+        "roave/security-advisories": "dev-master",
+        "symfony/maker-bundle": "^1.33"
     },
     "config": {
         "preferred-install": {
@@ -24,33 +36,21 @@
             "App\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear": "./bin/console cache:clear",
+            "assets:install %PUBLIC_DIR%": "./bin/console assets:install public"
         },
+        "docker-mysql": "docker-compose up --build -d",
+        "server-start": "symfony server:start",
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "@docker-mysql",
+            "@server-start"
         ],
         "post-update-cmd": [
             "@auto-scripts"
         ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
     },
     "extra": {
         "symfony": {
