--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,17 @@
         "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-migrations-bundle": "^2",
         "doctrine/orm": "^2",
-        "easycorp/easyadmin-bundle": "^3.5",
+        "knplabs/knp-paginator-bundle": "v5.2.*",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/mime": "4.4.*",
         "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/twig-bundle": "^4",
         "symfony/validator": "4.4.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "4.4.*"
     }
     ,
@@ -43,12 +47,16 @@
         },
         "docker-mysql": "docker-compose up --build -d",
         "migrations": "./bin/console doctrine:migrations:migrate",
-        "server-start": "symfony server:start",
+        "webpack": {
+            "npm:install": "npm install",
+            "yarn:install": "yarn install",
+            "yarn:encore:dev": "yarn encore dev",
+        },
         "post-install-cmd": [
             "@auto-scripts",
             "@docker-mysql",
             "@migrations",
-            "@server-start"
+            "@webpack"
         ],
         "post-update-cmd": [
             "@auto-scripts"
