--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,7 +31,7 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Service\FileUploader:
+    App\Service\FileHandler:
         arguments:
             $targetDirectory: '%app.upload_dir%'
 
